--- a/views/components/providerDashboard/providerSidebar.ejs
+++ b/views/components/providerDashboard/providerSidebar.ejs
@@ -38,6 +38,10 @@
       <i class="fas fa-map-marker-alt"></i>
       <span>Locations & Availability</span>
     </a>
+    <a href="#banking" class="nav-link" data-section="banking">
+      <i class="fas fa-university"></i>
+      <span>Banking & Payments</span>
+    </a>
     <a href="/dashboard/registerService" class="nav-link">
       <i class="fas fa-plus-circle"></i>
       <span>Register Service</span>
