--- a/views/pages/providerDashboard.ejs
+++ b/views/pages/providerDashboard.ejs
@@ -16,6 +16,7 @@
               <%- include('../components/providerDashboard/locations', { provider: provider }) %>
                 <%- include('../components/providerDashboard/profile', { user: currUser, provider: provider }) %>
                   <%- include('../components/providerDashboard/settings', { user: currUser, provider: provider }) %>
+                    <%- include('../components/providerDashboard/banking') %>
       </div>
   </div>
 
